--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.23.12",
     "gatsby-plugin-layout": "^1.3.8",
+    "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-styled-components": "^3.3.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
