--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.23.12",
+    "gatsby-plugin-anchor-links": "^1.1.1",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.3.8",
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-styled-components": "^3.3.8",
