--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "jest --watch"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
+    "babel-preset-gatsby": "^0.5.0",
+    "dayjs": "^1.8.28",
     "gatsby": "^2.23.12",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -26,6 +28,7 @@
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
+    "jest": "^26.1.0",
     "prettier": "2.0.5"
   },
   "repository": {
