--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.3.8",
     "gatsby-plugin-module-resolver": "^1.0.3",
+    "gatsby-plugin-nprogress": "^2.3.9",
     "gatsby-plugin-styled-components": "^3.3.8",
+    "gatsby-remark-line-breaks": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.1.1"
