Styled first 3 sections dynamically for mobile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "editor.fontFamily": "'hack', monospace"
+  "editor.fontFamily": "'hack', monospace",
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
