--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-gatsby": "^0.5.0",
     "dayjs": "^1.8.28",
     "gatsby": "^2.23.12",
+    "gatsby-cli": "^2.12.61",
     "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.3.8",
