--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-remark-line-breaks": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-spring": "^8.0.27",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
